Fix new form open/close buttons Fixed a few style issues Fixed some unneeded whitespace and functions Fixed some unwrapped text nodes

--- a/public/less/style.less
+++ b/public/less/style.less
@@ -98,6 +98,9 @@
 							select {
 								width: 145px;
 							}
+                            .plugin-forms-input-add, .plugin-forms-input-remove {
+                                margin-top: -4px;
+                            }
                         }
                     }
 
@@ -149,7 +152,7 @@
                         }
                         
                         .plugin-forms-value-label-pairs {
-                            margin-top: 3px;
+                            margin-bottom: 4px;
                             width: 350px;
 
                             .plugin-forms-option-value {
